app/oligrapher.scss
@use "sass:color";

$oligrapher_blue: #0c7fff;
$oligrapher_blue_dark: #3b0aff;
$font_color: black;
$link_color: $oligrapher_blue;
$button_bg_color: #2c63c8;
$button_font_color: white;
$header_menu_item_color: $font_color;
$header_menu_item_color_hover: $link_color;
$header_spacing_between_header: 10px;
$header_bottom_border_color: #6e89a1;
$header_save_button_bg_color: $button_bg_color;
$header_save_button_font_color: $button_font_color;
$header_discard_button_bg_color: #6e89a1;
$header_discard_button_font_color: white;

$oligrapher_dark_gray: #888;
$oligrapher_gray: #b3b3b3;
$oligrapher_font_gray: #b3b3b3;

$delete_red: #c82c63;
$toolbox_width: 250px;

$caption_backgound: lightgreen;
$caption_backgound_focused: lightcoral;

$node_highlight_color: $oligrapher_blue;
$edge_highlight_color: $oligrapher_blue;

@font-face {
  font-family: "Open Sans";
  font-style: normal;
  font-weight: 400;
  src: local(""),
    url("https://littlesis.org/static/fonts/open-sans-v34-latin-regular.woff2") format("woff2"),
    url("https://littlesis.org/static/fonts/open-sans-v34-latin-regular.woff") format("woff"),
    url("https://littlesis.org/static/fonts/open-sans-v34-latin-regular.ttf") format("truetype");
}

%box_shadow {
  -webkit-box-shadow: 0px 0px 20px 2px #eee;
  -moz-box-shadow: 0px 0px 20px 2p #eee;
  box-shadow: 0px 0px 20px 2px rgba(128, 128, 128, 0.3);
}

%editor_label {
  margin-bottom: 0.25em;
  color: $oligrapher_dark_gray;
  font-size: 14px;
  font-weight: bold;
}

%editor_input {
  font-size: 14px;
  line-height: 1em;
  height: 28px;
  border: 1px solid #ccc;
  border-radius: 3px;
  padding: 5px;
}

%toolbox_header {
  font-size: 20px;
  font-weight: bold;
  margin-bottom: 5px;
  line-height: 1.5em;

  button {
    float: right;
    border: none;
    margin-left: 0.5em;
    margin-top: 0;
    background-color: #fff;
    padding: 0;
  }
}

%message {
  padding: 10px;
  font-size: 14px;
  border: 1px solid #ccc;
  background-color: white;
  @extend %box_shadow;
}

%floating_editor_box {
  width: 235px;
  min-height: 300px;
  max-height: 450px;
  padding: 0.5em;
  box-sizing: border-box;
}

#oligrapher-container {
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: stretch;

  button, a:hover {
    cursor: pointer;
  }

  a {
    color: $link_color;
  }

}

#oligrapher-container #oligrapher-header,
#oligrapher-container #oligrapher-header-condensed {
  border-bottom: 1px solid #ccc;
  position: relative;
  margin-left: 8px;
  margin-right: 8px;

  &.oligrapher-header-collapsed {
    min-height: 52px;

    #oligrapher-header-top {
      /* display: flex; */
      /* flex-direction: row; */
    }

    h1#oligrapher-title {
      margin-top: 7px;
      margin-bottom: 0;
      font-size: 30px;
      line-height: 40px;
      height: 30px;
    }
  }

  /* title and subtitle*/
  h1 {
    font-size: 42px;
    margin-top: 10px;
    margin-bottom: 5px;
    box-sizing: border-box;

    input {
      font-family: "Open Sans", Helvetica, Arial, sans-serif;
      font-size: 42px;
      height: 48px;
      margin-left: -4px;
      max-width: 800px;
      width: 100%;
      border: 1px solid #ccc;
    }

    a {
      color: black;
      text-decoration: none;
      font-weight: normal;
    }
  }

  #oligrapher-header-subtitle-wrapper {
    margin-top: 0;
    margin-bottom: 0;
    font-size: 18px;
    line-height: 24px;
    padding-top: 0px;
    padding-bottom: 10px;

    input {
      width: 100%;
      height: 24px;
      box-sizing: border-box;
      font-size: 18px;
      line-height: 24px;
      margin-left: -4px;
      border: 1px solid #ccc;
    }
  }

  #oligrapher-header-toggler {
    position: absolute;
    bottom: 0;
    left: 50%;
    margin-left: -10px;
    text-align: center;
    width: 20px;
    height: 14px;
    font-size: 13px;
    line-height: 12px;
    border: 1px solid #ccc;
    border-bottom: 0;
    cursor: pointer;
  }

  #oligrapher-header-bottom {
    display: flex;
    flex-direction: row;

    margin-bottom: 8px;

    &:not(.editing) {
      margin-bottom: 0.5em;
    }

    /* byline  */
    #oligrapher-header-left-wrapper {
      flex-grow: 2;
      flex-shrink: 2;
      padding-right: 1.5em;

      #oligrapher-attribution {
        font-size: 0.9em;
        line-height: 1.2em;

        a {
          color: $link_color;
          text-decoration: none;

          &:hover {
            text-decoration: underline;
          }
        }
      }
    }
    /* edit actions/  */
    #oligrapher-header-right-wrapper {
      flex-grow: 0;
      flex-shrink: 0;
      margin-right: 0.5em;
      margin-left: auto; /* This pushes the flex item to the right */
      align-self: flex-end;

      button {
        margin-right: 5px;
      }

      .oligrapher-header-actions,
      .oligrapher-header-edit-actions {
        .oligrapher-header-edit-actions-lock {
          margin-right: 0.5em;
          color: $oligrapher_dark_gray;
        }

        .header-action-menu-wrapper {
          display: inline-block;
        }

        #toggle-action-menu:focus {
          outline: none;
        }
      }
    }
  }
}
/* ... */

